Fixed index image covering its container

--- a/src/components/indexContainer/indexContainer.module.scss
+++ b/src/components/indexContainer/indexContainer.module.scss
@@ -51,9 +51,11 @@
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
   height: 100%;
 }
 
 .image {
+  width: 100%;
   height: 100%;
 }
